# strands-cli

./: .codespellrc  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  API_PRD.md  ARK_PRD.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_REMEDIATION_PLAN.md  CONTRIBUTING.md  DOCS_BUILD_SUMMARY.md  DURABLE.md  FIX.md  HITL.md  HITL_IMPLEMENTATION.md  MANUAL_REVIEW_2025-11-11.md  PERFORMANCE.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3.md  PHASE8_SUMMARY.md  PLAN.md  PLAN_NATIVE_TOOLS.md  README.md  RESIDUAL.md  REVIEW.md  SKILLS_PRD.md  STREAMLIT_API.md  mkdocs.yml  pyproject.toml  spec-generation-notes.md  temp_imports.txt  test_concurrent_requests.py  test_error_handling.py  test_fastapi_integration.py  test_fastapi_routes.py  test_ui_demo.py  versions.json
.claude/: settings.local.json
.claude/agents/: docs-accuracy-verifier.md
.github/: COPILOT_REVIEW_SETUP.md  QUICK_START.md  REVIEW_PROGRESS.md  copilot-instructions.md  dependabot.yml
.github/agents/: Comment.agent.md  Review.agent.md  comment-reviewer.agent.md  performance-reviewer.agent.md  security-reviewer.agent.md
.github/instructions/: code-review.instructions.md
.github/prompts/: Phase2.prompt.md  Phase3.prompt.md  migrate-feature.prompt.md  plan-graphHitlImplementation.prompt.md  plan-graphPatternHitl.prompt.md  plan-humanInTheLoop.prompt.md  plan-phase10ReviewImplementation.prompt.md  plan-week1MvpInteractiveHitl.prompt.md  review-checklist.prompt.md  review-comments.prompt.md  review-layer.prompt.md  review-unit.prompt.md
.github/workflows/: ci.yml  docs.yml  release.yml
artifacts/: AI Ethics-research.md  analysis-AI in Healthcare.md  analysis-ollama.md  customer-response.md  multi-agent-unsupported-unsupported.md  quantum computing-workflow.md  summary-AI in Healthcare.txt
artifacts/artifacts/: analysis-ollama.md  analysis-openai.md
docs/: API.md  ATOMIC_AGENTS.md  COMMENTS.md  DEPLOYMENT.md  DOCS_QUICKSTART.md  HTTP_EXECUTOR_METADATA.md  INTEGRATIONS.md  MANUAL.md  ORIGINAL_PLAN.md  PHASE6_IMPLEMENTATION_PLAN.md  PRD_SingleAgent_MVP.md  README-PRESETS.md  STREAMING_DESIGN.md  TELEMETRY.md  TOOL_DEVELOPMENT.md  security.md  stack.md  strands-phase6-context-research.md  strands-workflow-manual.md  strands-workflow.schema.json
docs/user-guide/: troubleshooting.md
examples/: atomic-ref-demo-openai.yaml  backward-compatibility-test.yaml  chain-3-step-research-openai.yaml  chain-3-step-research.yaml  chain-3-step-resume-demo.yaml  chain-calculator-openai.yaml  chain-hitl-approval-demo.yaml  chain-hitl-business-proposal-openai.yaml  chain-interactive-prompts-openai.yaml  classify_emails_e2e.py  compaction-auto-reduce-test.yaml  compaction-test-ollama.yaml  compaction-test-openai.yaml  context-notes-demo-openai.yaml  customer-support-intake-composite-openai.yaml  debug-demo-openai.yaml  duckduckgo-search-demo.yaml  evaluator-optimizer-code-review-bedrock.yaml  evaluator-optimizer-code-review-openai.yaml  evaluator-optimizer-hitl-review-openai.yaml  evaluator-optimizer-resume-demo-openai.yaml  evaluator-optimizer-writing-ollama.yaml  evaluator-optimizer-writing-openai.yaml  github-api-example-openai.yaml  graph-decision-tree-openai.yaml  graph-hitl-approval-demo-openai.yaml  graph-iterative-refinement-openai.yaml  graph-resume-demo-openai.yaml  graph-state-machine-openai.yaml  inference-overrides-openai.yaml  jit-codebase-analysis-openai.yaml  jit-config-audit-openai.yaml  jit-log-analysis-openai.yaml  jit-tools-test-openai.yaml  manual-gate-chain-approve-openai.yaml  manual-gate-chain-deny-openai.yaml  manual-gate-graph-openai.yaml  manual-gate-workflow-abort-openai.yaml  mcp-filesystem-openai.yaml  mcp-multi-server-openai.yaml  (+57 more)
examples/api/: 01_interactive_hitl.py  02_chain_builder.py  02_simple_chain.py  03_async_execution.py  03_workflow_builder.py  04_custom_hitl_handler.py  04_parallel_builder.py  05_graph_builder.py  06_event_callbacks.py  06_routing_builder.py  07_evaluator_optimizer_builder.py  07_session_management.py  08_async_execution.py  08_orchestrator_builder.py  09_fastapi_integration.py  10_webhook_notifications.py  11_streaming_responses.py  README.md  webhook_test_server.py
examples/skills/: README.md
manual/: SUMMARY.md  index.md
manual/explanation/: architecture.md  design-decisions.md  index.md  patterns.md  performance.md  security-model.md
manual/howto/: atomic-agents.md  budgets.md  context-management.md  develop-tools.md  hitl.md  run-workflows.md  secrets.md  session-management.md  skills.md  telemetry.md  tools.md  validate-workflows.md
manual/reference/: atomic-quick-reference.md  cli.md  (+9 more)
overrides/: main.html
scripts/: README.md  bump-version.ps1  dev.ps1  docs.ps1  generate_schema_docs.py  test_fastapi_router.py
streamlit/: INTEGRATION_GUIDE.md  __init__.py  test_workflow_session.py  workflow_session.py
tests/: __init__.py  conftest.py  test_agent_cache.py  test_api_builder_integration.py  test_api_builders.py  test_api_execution_hitl_loop.py  test_api_executor_integration.py  test_api_golden.py  test_api_workflow.py  test_approval_hooks.py  test_async_context.py  test_atomic_detection.py  test_capability.py  test_capability_reporter.py  test_chain.py  test_chain_checkpointing.py  test_chain_hitl.py  test_chain_resume.py  test_checkpoint_utils.py  test_cli.py  test_cli_integration.py  test_conditions_security.py  test_config.py  test_context_compaction.py  test_duckduckgo_search.py  test_e2e.py  test_evaluator_optimizer.py  test_evaluator_optimizer_hitl.py  test_evaluator_optimizer_resume.py  test_exec_utils.py  test_executor.py  test_graph.py  test_graph_hitl.py  test_graph_node_types.py  test_graph_viz.py  test_hitl_timeout.py  test_hooks.py  test_hooks_adaptive.py  test_http_executor_factory.py  test_inference.py  (+49 more)
v0.11/: 404.html  index.html  objects.inv  sitemap.xml
v0.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.4/: 404.html  index.html  sitemap.xml
v0.4.2/: 404.html  index.html  sitemap.xml
v0.5/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.0/: 404.html  index.html  sitemap.xml
(+551 files in other folders)
